--- a/index.html
+++ b/index.html
@@ -43,7 +43,10 @@
     </div>
     
   </div> 
-  <a href="Saukhyasheel-Sardesai-CV.pdf" download class="btn btn2" style="text-align: left; display: flex; align-content: flex-start;">Download CV</a>
+  <a href="Saukhyasheel-Sardesai-CV.pdf" download class="btn btn2 download-btn">
+    Download CV
+</a>
+
  
   <div id="about">
     <div class="container">
@@ -179,7 +182,7 @@
     </div>
 
     <!-- Full-Stack Development Services -->
-    <h3 class="sub-sub-title" style="margin-top: 20px;">Full-Stack Development</h3>
+    <h3 class="sub-sub-title" >Full-Stack Development</h3>
 
     <div class="services-list">
 
